--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.1",
+    "js-tiktoken": "^1.0.21",
     "openai": "^5.12.2"
-  }
+  },
+  "description": ""
 }
