--- a/GenAI-3/package.json
+++ b/GenAI-3/package.json
@@ -9,8 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "openai": "^5.15.0"
-  }
+    "axios": "^1.12.2",
+    "dotenv": "^17.2.2",
+    "openai": "^5.20.3"
+  },
+  "description": ""
 }
